# libserial

./: CMakeLists.txt  README.md  log.h  serial_data.h  serial_err.h  serial_factory.h  serial_intf.h  serial_port_lib.cpp  test.cpp  test_main.cpp
windows/: win_serial.cpp  win_serial.h
